Moved files around-- need to delete _archive

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
+    "start": "tsc --watch",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest"
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.26.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
+    "@types/p5": "^1.7.6",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
@@ -25,5 +26,7 @@
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "p5": "^1.11.2"
+  }
 }
