--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,25 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    // "target": "ES2020",
+    "target": "ES6",
     "useDefineForClassFields": true,
-    "module": "ESNext",
+    // "module": "ESNext",
+    "module": "CommonJS",
+    "sourceMap": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
+    "outDir": "./dist",
+    "rootDir": "./src",
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    // "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
-    "types": ["jest", "node"],
+    // "allowImportingTsExtensions": true,
+    // "noEmit": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["jest", "node", "p5/global"],
 
     /* Linting */
     "strict": true,
@@ -22,5 +28,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
