--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "motion-and-tween",
+  "name": "my-webpack-project",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "start": "tsc --watch",
-    "build": "tsc && vite build",
+    "build": "tsc --watch; webpack --mode=debug --node-env=debug",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -17,16 +21,26 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/p5": "^1.7.6",
+    "@webpack-cli/generators": "^3.0.7",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.1"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
     "p5": "^1.11.2"
-  }
+  },
+  "description": "My webpack project"
 }
