--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,10 @@
 {
   "compilerOptions": {
-    // "target": "ES2020",
-    "target": "ES6",
-    "useDefineForClassFields": true,
-    // "module": "ESNext",
-    "module": "CommonJS",
-    "sourceMap": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-
-    "outDir": "./dist",
-    "rootDir": "./src",
-    /* Bundler mode */
-    // "moduleResolution": "bundler",
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    // "allowImportingTsExtensions": true,
-    // "noEmit": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["jest", "node", "p5/global"],
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noImplicitAny": true,
+    "module": "es6",
+    "target": "es5",
+    "allowJs": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "files": ["src/index.ts"]
 }
