--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts"],
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
