--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
@@ -5,6 +6,7 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./src"
   },
