--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
