--- a/.npmignore
+++ b/.npmignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist
 dist-ssr
 *.local
 
@@ -23,6 +23,5 @@ dist-ssr
 *.sln
 *.sw?
 backup
-
 yarn.lock
 package-lock.npm
