--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "my-webpack-project",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "start": "tsc --watch; webpack serve ./dist/index.html",
